--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,8 +4,15 @@
     padding: 0;
 }
 
+/* Add New User Title and Home Link */
 .banner {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-left: 110px;
+}
+
+/* Create User Button */
+.btn {
+    margin-top: 10px;
 }
