--- a/templates/create.html
+++ b/templates/create.html
@@ -11,6 +11,7 @@
     <title>New User</title>
 </head>
 <body>
+    <!-- Container -->
     <div class="container">
         <div class="banner">
             <h1>Add a New User</h1>
@@ -29,8 +30,9 @@
                 <label for="email">Email:</label>
                 <input type="text" name="email" class="form-control">
             </div>
-            <input type="submit" value="Create" class="btn btn-success">
+            <input type="submit" value="Create User" class="btn btn-success">
         </form>
-    </body>
     </div>
+    <!-- End of Container -->
+</body>
 </html>
