--- a/templates/read.html
+++ b/templates/read.html
@@ -10,6 +10,7 @@
     <title>Users</title>
 </head>
 <body>
+    <!-- All Users Table -->
     <h1 class="text-center">All Users</h1>
     <table class="table table-hover">
         <thead>
@@ -31,6 +32,7 @@
             {% endfor %}
         </tbody>
     </table>
+    <!-- End of All Users Table -->
     <a href="/user/new" class="btn btn-primary">Add a New User</a>
 </body>
 </html>
